[project]
name = "interval-repeat-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.5.5",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiormq==6.8.1",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "black==25.1.0",
    "certifi==2025.6.15",
    "click==8.2.1",
    "cryptography>=45.0.5",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "exceptiongroup==1.3.0",
    "fast-depends==2.4.12",
    "fastapi==0.115.14",
    "fastapi-cli==0.0.7",
    "faststream==0.5.44",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.6.2",
    "mypy-extensions==1.1.0",
    "orjson==3.10.18",
    "packaging==25.0",
    "pamqp==3.3.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "propcache==0.3.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-env==1.1.5",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "rich==14.0.0",
    "rich-toolkit==0.14.8",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "ujson==5.10.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "yarl==1.20.1",
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.pytest_env]
DB_SYNC_DRIVER="sqlite"
TEST_MODE=true
